force-app/main/default/objects/Funds_Adjustment_Request__c/Funds_Adjustment_Request__c.object-meta.xml
<CustomObject>
    <label>Funds Adjustment Request</label>
    <nameField>
        <displayFormat>FAR-{00000}</displayFormat>
        <label>Funds Adjustment Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funds Adjustment Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>