force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Account_Contractor_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Contractor_Id__c</fullName>
    <formula>IF(
ISBLANK(  Contractor_Name__r.Account.Name ), 
&quot;Contractor Id Populates After Save&quot;, TEXT( Contractor_Name__r.Account.Contractor_Id__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contractor Id (From Account)</label>
    <type>Text</type>
</CustomField>