force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Adjust_Contractor_Funds__c.field-meta.xml
<CustomField>
    <fullName>Adjust_Contractor_Funds__c</fullName>
    <inlineHelpText>Does the contractor finance team need to adjust the contractor pay (either to increase or decrease his pay) for this job, to reflect the customer adjustment?</inlineHelpText>
    <label>Adjust Contractor Funds Accordingly</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>