force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Amount__c</fullName>
    <inlineHelpText>&quot;Do not list total price of job. Only enter the amount the adjustment is for.&quot;</inlineHelpText>
    <label>Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>