force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Adjustment_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Explanation__c</fullName>
    <label>Adjustment Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>