force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Adjustment_Method__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Method__c</fullName>
    <label>Adjustment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Reprice</fullName>
            </value>
            <value>
                <fullName>Revision</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>