force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Associated_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Associated_Contact_Type__c</fullName>
    <formula>IF( AND( 
 ISPICKVAL( Adjust_Contractor_Funds__c, &quot;Yes&quot;),  
OR( 
  RecordType.DeveloperName  = &quot;Consumer_Refund&quot;, RecordType.DeveloperName  = &quot;Client_Adjustment&quot;)),
  Contractor_Name__r.RecordType.Name,  Client_Consumer_Name__r.RecordType.Name 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associated Contact Type</label>
    <type>Text</type>
</CustomField>