force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Cancel_Request__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for logic in updating record status to &quot;Request Cancelled&quot;</description>
    <inlineHelpText>Please select to cancel your request</inlineHelpText>
    <label>Cancel Request</label>
    <type>Checkbox</type>
</CustomField>