force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Client_Consumer_Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Consumer_Adjustment_Type__c</fullName>
    <inlineHelpText>Does the Client or Consumers payment need to be adjusted accordingly?  if yes, select Full or Partial Adjustment</inlineHelpText>
    <label>Customer Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Full Adjustment</fullName>
            </value>
            <value>
                <fullName>Partial Adjustment</fullName>
            </value>
            <value>
                <fullName>Trip Fee Reduction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>