force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Client_Consumer_Charge_Adjustment_Req__c.field-meta.xml
<CustomField>
    <fullName>Client_Consumer_Charge_Adjustment_Req__c</fullName>
    <inlineHelpText>Does the Client or Consumer charge need to be adjusted?  Yes or No</inlineHelpText>
    <label>Client/Consumer Charge Adjustment Req?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>