force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Client_Consumer_Funds_Adjustment_Record__c.field-meta.xml
<CustomField>
    <fullName>Client_Consumer_Funds_Adjustment_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client/Consumer Funds Adjustment Record</label>
    <referenceTo>Funds_Adjustment_Request__c</referenceTo>
    <relationshipLabel>Related Adjustment Requests</relationshipLabel>
    <relationshipName>Funds_Adjustment_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>