force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Client_Consumer_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Consumer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Consumer Contact, Client Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Funds Adjustment Requests (Client / Consumer Name)</relationshipLabel>
    <relationshipName>Funds_Adjustment_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>