force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Client_Consumer_Payment_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Consumer_Payment_Processed_Date__c</fullName>
    <label>Customer Payment Processed Date</label>
    <type>Date</type>
</CustomField>