force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Client_Consumer_Rejection_Notes__c.field-meta.xml
<CustomField>
    <fullName>Client_Consumer_Rejection_Notes__c</fullName>
    <label>Customer Rejection Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>