force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Contractor_Funds_Adjustment_Record__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Funds_Adjustment_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For relating a new funds adjustment request to an existing adjustment</description>
    <label>Contractor Funds Adjustment Record</label>
    <referenceTo>Funds_Adjustment_Request__c</referenceTo>
    <relationshipLabel>Related Adjustment Records</relationshipLabel>
    <relationshipName>Funds_Adjustment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>