force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Contractor_Id__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Id__c</fullName>
    <label>Contractor Id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>