force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Contractor_Name__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Contractor_Owner</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Contractor_Team_Member</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Funds Adjustment Requests</relationshipLabel>
    <relationshipName>Funds_Adjustment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>