force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Contractor_Pay_Increase__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Pay_Increase__c</fullName>
    <inlineHelpText>This will result in the contractor being paid proportionally for this additional customer charge, based on the take rate for this job.</inlineHelpText>
    <label>Contractor Pay Increase</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Adjustment_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>