force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Contractor_Payment_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Payment_Processed_Date__c</fullName>
    <label>Contractor Payment Processed Date</label>
    <type>Date</type>
</CustomField>