force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Finance_Client_Consumer_ADJ_Status__c.field-meta.xml
<CustomField>
    <fullName>Finance_Client_Consumer_ADJ_Status__c</fullName>
    <label>Customer Adjustment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Request Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>