force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Finance_Client_Consumer_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Finance_Client_Consumer_Job_Id__c</fullName>
    <label>Customer Job ID</label>
    <length>120</length>
    <type>Text</type>
</CustomField>