force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Finance_Contractor_Finance_Agent__c.field-meta.xml
<CustomField>
    <fullName>Finance_Contractor_Finance_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor Finance Agent</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Finance</value>
        </filterItems>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>Finance</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Funds_Adjustment_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>