force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Finance_Contractor_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Finance_Contractor_Job_ID__c</fullName>
    <description>Used for Finance process</description>
    <label>Contractor Job ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>