force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Finance_Finance_Rejection_Notes__c.field-meta.xml
<CustomField>
    <fullName>Finance_Finance_Rejection_Notes__c</fullName>
    <label>Contractor Rejection Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>