force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Finance_Invoice_or_Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Finance_Invoice_or_Check_Number__c</fullName>
    <label>Invoice or Check Number</label>
    <length>120</length>
    <type>Text</type>
</CustomField>