force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Finance_Notes_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Finance_Notes_Contractor__c</fullName>
    <label>Contractor Finance Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>