force-app/main/default/objects/Funds_Adjustment_Request__c/fields/How_was_Error_Discovered__c.field-meta.xml
<CustomField>
    <fullName>How_was_Error_Discovered__c</fullName>
    <inlineHelpText>How did you find out about this error?</inlineHelpText>
    <label>How Was Error Discovered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Caught it internally</fullName>
            </value>
            <value>
                <fullName>Client brought it to my attention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>