force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Operations_Status__c.field-meta.xml
<CustomField>
    <fullName>Operations_Status__c</fullName>
    <description>Read Only, controlled via approval process status update</description>
    <label>Operations Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Request Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>