force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Processed_in_Gil__c.field-meta.xml
<CustomField>
    <fullName>Processed_in_Gil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed in Gil</label>
    <type>Checkbox</type>
</CustomField>