force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Reason_for_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Adjustment__c</fullName>
    <label>Reason for Adjustment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bid Task</fullName>
            </value>
            <value>
                <fullName>BPI Error</fullName>
            </value>
            <value>
                <fullName>Duplicate Charge</fullName>
            </value>
            <value>
                <fullName>Duplicate Service</fullName>
            </value>
            <value>
                <fullName>Fix it Task</fullName>
            </value>
            <value>
                <fullName>Incorrect Pricing/Incorrect Tracing</fullName>
            </value>
            <value>
                <fullName>Incorrect Snow Depth</fullName>
            </value>
            <value>
                <fullName>Insurance Claim</fullName>
            </value>
            <value>
                <fullName>No Work Done/ Partial Work Completed</fullName>
            </value>
            <value>
                <fullName>OGF</fullName>
            </value>
            <value>
                <fullName>Retention Effort</fullName>
            </value>
            <value>
                <fullName>RO Error</fullName>
            </value>
            <value>
                <fullName>Seasonality Error</fullName>
            </value>
            <value>
                <fullName>Serviced After Stop Request</fullName>
            </value>
            <value>
                <fullName>Serviced Too Soon</fullName>
            </value>
            <value>
                <fullName>TE Error - Client Comp</fullName>
            </value>
            <value>
                <fullName>TE Good Faith Discount</fullName>
                <label>TE Good Faith Discount - (TE Not at Fault)</label>
            </value>
            <value>
                <fullName>Wrong Property Serviced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>