force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$User.Alias</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Funds_Adjustment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>