force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Resubmission__c.field-meta.xml
<CustomField>
    <fullName>Resubmission__c</fullName>
    <label>Resubmission?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>