force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Submission_Notes__c.field-meta.xml
<CustomField>
    <fullName>Submission_Notes__c</fullName>
    <description>Field for collecting notes from Ops when submitting a client adjustment request</description>
    <inlineHelpText>Please list any other relevant information here. If the client has a specific request for the credit method (Revision instead of credit on the next invoice or check instead of revision, etc.) please get that approved from Austen and list the details here that it has been approved. Example: “Client requested check refund - Austen Approved 9/14/2021”.</inlineHelpText>
    <label>Submission Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>