force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Submitted_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Submitted_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>updated via approval process and used in follow-up reminder logic</description>
    <label>Submitted for Approval</label>
    <type>Checkbox</type>
</CustomField>