force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Task_Id__c</fullName>
    <label>Task Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>