force-app/main/default/objects/Funds_Adjustment_Request__c/fields/Trip_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Trip_Fee_Amount__c</fullName>
    <label>Trip Fee Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$25</fullName>
            </value>
            <value>
                <fullName>$35</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>