force-app/main/default/objects/Funds_Adjustment_Request__c/recordTypes/Client_Adjustment.recordType-meta.xml
<RecordType>
    <fullName>Client_Adjustment</fullName>
    <active>true</active>
    <label>Client Adjustment</label>
</RecordType>