force-app/main/default/objects/Funds_Adjustment_Request__c/recordTypes/Consumer_Adjustment.recordType-meta.xml
<RecordType>
    <fullName>Consumer_Adjustment</fullName>
    <active>true</active>
    <label>Consumer Adjustment</label>
</RecordType>