force-app/main/default/objects/Funds_Adjustment_Request__c/recordTypes/Contractor_Adjustment.recordType-meta.xml
<RecordType>
    <fullName>Contractor_Adjustment</fullName>
    <active>true</active>
    <label>Contractor Adjustment</label>
</RecordType>