force-app/main/default/objects/Funds_Adjustment_Request__c/validationRules/Trip_Fee_Reduction_Amount_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Trip_Fee_Reduction_Amount_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Client_Consumer_Adjustment_Type__c , &apos;Trip Fee Reduction&apos;),
     ISBLANK(TEXT(Trip_Fee_Amount__c))
)</errorConditionFormula>
    <errorMessage>Please select a Trip Fee Amount when choosing &quot;Trip Fee Reduction&quot; as Customer Adjustment Type.</errorMessage>
</ValidationRule>