force-app/main/default/objects/Funds_Adjustment_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Adjustment_Type__c</columns>
    <columns>Job_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Client_Consumer_Name__c</columns>
    <columns>Contractor_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Request_Status__c</columns>
    <columns>Client_Consumer_Charge_Adjustment_Req__c</columns>
    <columns>Adjust_Contractor_Funds__c</columns>
    <columns>Finance_Contractor_Adjustment_Status__c</columns>
    <columns>Finance_Client_Consumer_ADJ_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Requests (Cxtr - Client - Consumer)</label>
</ListView>