force-app/main/default/objects/Funds_Adjustment_Request__c/listViews/All_Client_Requests_x1.listView-meta.xml
<ListView>
    <fullName>All_Client_Requests_x1</fullName>
    <booleanFilter>(5 and 1) or (5 and 4 and 3 and 2)</booleanFilter>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Adjustment_Type__c</columns>
    <columns>Job_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Client_Consumer_Name__c</columns>
    <columns>Amount__c</columns>
    <columns>Contractor_Name__c</columns>
    <columns>Adjustment_Amount__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Request_Status__c</columns>
    <columns>Client_Consumer_Charge_Adjustment_Req__c</columns>
    <columns>Finance_Client_Consumer_ADJ_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Funds_Adjustment_Request__c.Client_Adjustment</value>
    </filters>
    <filters>
        <field>Client_Consumer_Charge_Adjustment_Req__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>Customer_Type__c</field>
        <operation>equals</operation>
        <value>Client</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Funds_Adjustment_Request__c.Contractor_Adjustment</value>
    </filters>
    <filters>
        <field>Operations_Status__c</field>
        <operation>equals</operation>
        <value>Pending,Approved,Rejected,Request Cancelled</value>
    </filters>
    <label>All Client Requests</label>
    <sharedTo>
        <role>Director_Of_Finance</role>
        <role>Finance_Advocate</role>
        <role>Finance_Manager</role>
        <role>Finance_Team_Lead</role>
    </sharedTo>
</ListView>